# max_virtual_harp

./: BowInput.cpp  BowInput.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Dampers.cpp  Dampers.h  Globals.cpp  Globals.h  Obstacle.cpp  Obstacle.h  StringPhysics.cpp  StringPhysics.h  mi_virtual_harp.cpp  mi_virtual_harp.h  mi_virtual_harp_test.cpp
